Set structure of the site
Updates index.html to show the site will look.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anime</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Anime Trails</h1>
+
+    <h2>Naruto Shippuden</h2>
+    <p>Genre: What Power: What</p>
+    <h3>Quote</h3>
+    <h4>Itachi</h4>
+    <h4>Sasuke</h4>
+    <h4>Itachi</h4>
+    <h4>Sasuke</h4>
+
+    <h2>Fairy Tail</h2>
+    <p>Genre: What Power: What</p>
+    <h3>Quote</h3>
+    <h4>Natsu</h4>
+    <h4>Gray</h4>
+    <h4>Natsu</h4>
+    <h4>Gray</h4>
+
+    <h2>One Piece</h2>
+    <p>Genre: What Power: What</p>
+    <h3>Quote</h3>
+    <h4>Luffy</h4>
+    <h4>Zoro</h4>
+    <h4>Luffy</h4>
+    <h4>Zoro</h4>
+
+    <h2>Gurren Lagann</h2>
+    <p>Genre: What Power: What</p>
+    <h3>Quote</h3>
+    <h4>Kamina</h4>
+    <h4>Simon</h4>
+    <h4>Luffy</h4>
+    <h4>Zoro</h4>
+
 </body>
 </html>
