--- a/index.html
+++ b/index.html
@@ -10,36 +10,52 @@
     <h1>Anime Trails</h1>
 
     <h2>Naruto Shippuden</h2>
-    <p>Genre: What Power: What</p>
-    <h3>Quote</h3>
+    <p>Action, Adventure, Comedy, Superpower, Martial-Arts, Fantasy</p>
+    <h3>“HARD WORK IS WORTHLESS FOR THOSE THAT DON'T BELIEVE IN THEMSELVES.” - Naruto Uzumaki</h3>
     <h4>Itachi</h4>
-    <h4>Sasuke</h4>
-    <h4>Itachi</h4>
-    <h4>Sasuke</h4>
+    <img src="https://images7.alphacoders.com/119/1195975.png" alt="" width="20%" height="20%">
+    <h4>Minato</h4>
+    <img src="https://images5.alphacoders.com/788/788694.jpg" alt="" width="20%" height="20%">
+    <h4>Pain</h4>
+    <img src="https://images8.alphacoders.com/124/1249998.jpg" alt="" width="20%" height="20%">
+    <h4>Sakura</h4>
+    <img src="https://images3.alphacoders.com/936/936018.png" alt="" width="20%" height="20%">
 
     <h2>Fairy Tail</h2>
-    <p>Genre: What Power: What</p>
-    <h3>Quote</h3>
+    <p>Animation · Action · Adventure · Comedy · Fantasy</p>
+    <h3>“If you truly desire greatness, you must first know what makes you weak!” - Erza Scarlet</h3>
+    <h4>Erza</h4>
+    <img src="https://images.alphacoders.com/479/479713.jpg" alt="" width="20%" height="20%">
     <h4>Natsu</h4>
+    <img src="https://images.alphacoders.com/942/942537.png" alt="" width="20%" height="20%">
     <h4>Gray</h4>
-    <h4>Natsu</h4>
-    <h4>Gray</h4>
+    <img src="https://images3.alphacoders.com/935/935560.png" alt="" width="20%" height="20%">
+    <h4>Zeref</h4>
+    <img src="https://images.alphacoders.com/748/748206.png" alt="" width="20%" height="20%">
 
     <h2>One Piece</h2>
-    <p>Genre: What Power: What</p>
-    <h3>Quote</h3>
-    <h4>Luffy</h4>
-    <h4>Zoro</h4>
-    <h4>Luffy</h4>
-    <h4>Zoro</h4>
+    <p>Action, Adventure, Fantasy, Drama</p>
+    <h3>“If You Don't Take Risks, You Can't Create A Future” - Luffy</h3>
+    <h4>Ace</h4>
+    <img src="https://images.alphacoders.com/846/84631.jpg" alt="" width="20%" height="20%">
+    <h4>Zorro</h4>
+    <img src="https://images3.alphacoders.com/131/1313891.png" alt="" width="20%" height="20%">
+    <h4>Doflamingo</h4>
+    <img src="https://images4.alphacoders.com/127/1278942.jpg" alt="" width="20%" height="20%">
+    <h4>Nico Robin</h4>
+    <img src="https://images2.alphacoders.com/128/1285461.png" alt="" width="20%" height="20%">
 
     <h2>Gurren Lagann</h2>
-    <p>Genre: What Power: What</p>
-    <h3>Quote</h3>
+    <p>Action, Adventure</p>
+    <h3>“Believe In The Kamina That Believe In You.” - Kamina</h3>
     <h4>Kamina</h4>
+    <img src="https://images7.alphacoders.com/851/851227.jpg" alt="" width="20%" height="20%">
     <h4>Simon</h4>
-    <h4>Luffy</h4>
-    <h4>Zoro</h4>
+    <img src="https://images4.alphacoders.com/133/133244.jpg" alt="" width="20%" height="20%">
+    <h4>Yoko</h4>
+    <img src="https://images4.alphacoders.com/660/660281.jpg" alt="" width="20%" height="20%">
+    <h4>Logo</h4>
+    <img src="https://images4.alphacoders.com/119/119476.jpg" alt="" width="20%" height="20%">
 
 </body>
 </html>
