--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Anime</title>
   </head>
@@ -32,8 +35,10 @@
             srcset=""
           />
 
+          <hr />
+
+          <h3>Favourite Quote</h3>
           <div class="quote">
-            <img class="left-quotation-mark" src="quote.png" alt="" srcset="" />
             <div>
               <div class="quote-background">
                 <p class="quote-text">
@@ -46,13 +51,9 @@
                 <p class="quote-author">Naruto Uzumaki</p>
               </div>
             </div>
-            <img
-              class="right-quotation-mark"
-              src="quote.png"
-              alt=""
-              srcset=""
-            />
           </div>
+
+          <hr />
 
           <h3>Favourite Characters</h3>
           <div class="characters">
@@ -105,26 +106,20 @@
             alt=""
             srcset=""
           />
-
+          <hr />
+          <h3>Favourite Quote</h3>
           <div class="quote">
-            <img class="left-quotation-mark" src="quote.png" alt="" srcset="" />
             <div>
               <div class="quote-background">
-                <p>
+                <p class="quote-text">
                   “If you truly desire greatness, you must first know what makes
                   you weak!”
                 </p>
                 <p>Erza Scarlet</p>
               </div>
             </div>
-            <img
-              class="right-quotation-mark"
-              src="quote.png"
-              alt=""
-              srcset=""
-            />
           </div>
-
+          <hr />
           <h3>Favourite Characters</h3>
           <div class="characters">
             <div class="character">
@@ -163,23 +158,17 @@
             alt=""
             srcset=""
           />
-
+          <hr />
+          <h3>Favourite Quote</h3>
           <div class="quote">
-            <img class="left-quotation-mark" src="quote.png" alt="" srcset="" />
             <div>
               <div class="quote-background">
-                <p>“If You Don't Take Risks, You Can't Create A Future”</p>
+                <p class="quote-text">“If You Don't Take Risks, You Can't Create A Future”</p>
                 <p>Luffy</p>
               </div>
             </div>
-            <img
-              class="right-quotation-mark"
-              src="quote.png"
-              alt=""
-              srcset=""
-            />
           </div>
-
+          <hr />
           <h3>Favourite Characters</h3>
           <div class="characters">
             <div class="character">
@@ -224,23 +213,17 @@
             alt=""
             srcset=""
           />
-
+          <hr />
+          <h3>Favourite Quote</h3>
           <div class="quote">
-            <img class="left-quotation-mark" src="quote.png" alt="" srcset="" />
             <div>
               <div class="quote-background">
-                <p>“Believe In The Kamina That Believe In You.”</p>
+                <p class="quote-text">“Believe In The Kamina That Believe In You.”</p>
                 <p>Kamina</p>
               </div>
             </div>
-            <img
-              class="right-quotation-mark"
-              src="quote.png"
-              alt=""
-              srcset=""
-            />
           </div>
-
+          <hr />
           <h3>Favourite Characters</h3>
           <div class="characters">
             <div class="character">
