Complete set up of the structure and style

--- a/index.html
+++ b/index.html
@@ -28,13 +28,25 @@
           </div>
 
           <p>Action, Adventure, Comedy, Superpower, Martial-Arts, Fantasy</p>
-          <img
-            class="img-background"
-            src="https://images8.alphacoders.com/598/598786.jpg"
-            alt=""
-            srcset=""
-          />
 
+          <figure>
+            <img
+              class="img-background"
+              src="https://images8.alphacoders.com/598/598786.jpg"
+              alt=""
+              srcset=""
+            />
+            <figcaption>
+              <a
+                href="https://www.flaticon.com/free-icons/gear"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="gear icons"
+                >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                Coders</a
+              >
+            </figcaption>
+          </figure>
           <hr />
 
           <h3>Favourite Quote</h3>
@@ -59,38 +71,79 @@
           <div class="characters">
             <div class="character">
               <h4>Itachi</h4>
-              <img
-                class="character-image"
-                src="https://images7.alphacoders.com/119/1195975.png"
-                alt=""
-              />
+              <figure>
+                <img
+                  class="character-image"
+                  src="https://images7.alphacoders.com/119/1195975.png"
+                  alt=""
+                />
+
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Minato</h4>
-              <img
-                class="character-image"
-                src="https://images5.alphacoders.com/788/788694.jpg"
-                alt=""
-              />
+              <figure>
+                <img
+                  class="character-image"
+                  src="https://images5.alphacoders.com/788/788694.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Pain</h4>
-              <img
-                class="character-image"
-                src="https://images8.alphacoders.com/124/1249998.jpg"
-                alt=""
-              />
+              <figure>
+                <img
+                  class="character-image"
+                  src="https://images8.alphacoders.com/124/1249998.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Sakura</h4>
-              <img
-                class="character-image"
-                src="https://images3.alphacoders.com/936/936018.png"
-                alt=""
-              />
+              <figure>
+                <img
+                  class="character-image"
+                  src="https://images3.alphacoders.com/936/936018.png"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
           </div>
         </div>
@@ -100,12 +153,22 @@
             <h2>Fairy Tail</h2>
           </div>
           <p>Animation · Action · Adventure · Comedy · Fantasy</p>
-          <img
-            class="img-background"
-            src="https://images5.alphacoders.com/694/694325.png"
-            alt=""
-            srcset=""
-          />
+          <figure>
+            <img
+              class="img-background"
+              src="https://images5.alphacoders.com/694/694325.png"
+              alt=""
+              srcset=""
+            />
+            <figcaption>
+              <a
+                href="https://www.flaticon.com/free-icons/gear"
+                title="gear icons"
+                >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                Coders</a
+              >
+            </figcaption>
+          </figure>
           <hr />
           <h3>Favourite Quote</h3>
           <div class="quote">
@@ -124,25 +187,74 @@
           <div class="characters">
             <div class="character">
               <h4>Erza</h4>
-              <img src="https://images.alphacoders.com/479/479713.jpg" alt="" />
+              <figure>
+                <img
+                  src="https://images.alphacoders.com/479/479713.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Natsu</h4>
-              <img src="https://images.alphacoders.com/942/942537.png" alt="" />
+              <figure>
+                <img
+                  src="https://images.alphacoders.com/942/942537.png"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Gray</h4>
-              <img
-                src="https://images3.alphacoders.com/935/935560.png"
-                alt=""
-              />
+              <figure>
+                <img
+                  src="https://images3.alphacoders.com/935/935560.png"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Zeref</h4>
-              <img src="https://images.alphacoders.com/748/748206.png" alt="" />
+              <figure>
+                <img
+                  src="https://images.alphacoders.com/748/748206.png"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
           </div>
         </div>
@@ -152,18 +264,30 @@
             <h2>One Piece</h2>
           </div>
           <p>Action, Adventure, Fantasy, Drama</p>
-          <img
-            class="img-background"
-            src="https://images6.alphacoders.com/606/606263.jpg"
-            alt=""
-            srcset=""
-          />
+          <figure>
+            <img
+              class="img-background"
+              src="https://images6.alphacoders.com/606/606263.jpg"
+              alt=""
+              srcset=""
+            />
+            <figcaption>
+              <a
+                href="https://www.flaticon.com/free-icons/gear"
+                title="gear icons"
+                >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                Coders</a
+              >
+            </figcaption>
+          </figure>
           <hr />
           <h3>Favourite Quote</h3>
           <div class="quote">
             <div>
               <div class="quote-background">
-                <p class="quote-text">“If You Don't Take Risks, You Can't Create A Future”</p>
+                <p class="quote-text">
+                  “If You Don't Take Risks, You Can't Create A Future”
+                </p>
                 <p>Luffy</p>
               </div>
             </div>
@@ -173,31 +297,74 @@
           <div class="characters">
             <div class="character">
               <h4>Ace</h4>
-              <img src="https://images.alphacoders.com/846/84631.jpg" alt="" />
+              <figure>
+                <img
+                  src="https://images.alphacoders.com/846/84631.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Zorro</h4>
-              <img
-                src="https://images3.alphacoders.com/131/1313891.png"
-                alt=""
-              />
+              <figure>
+                <img
+                  src="https://images3.alphacoders.com/131/1313891.png"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Doflamingo</h4>
-              <img
-                src="https://images4.alphacoders.com/127/1278942.jpg"
-                alt=""
-              />
+              <figure>
+                <img
+                  src="https://images4.alphacoders.com/127/1278942.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Nico Robin</h4>
-              <img
-                src="https://images2.alphacoders.com/128/1285461.png"
-                alt=""
-              />
+              <figure>
+                <img
+                  src="https://images2.alphacoders.com/128/1285461.png"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
           </div>
         </div>
@@ -207,18 +374,30 @@
             <h2>Gurren Lagann</h2>
           </div>
           <p>Action, Adventure</p>
-          <img
-            class="img-background"
-            src="https://images.alphacoders.com/851/851142.png"
-            alt=""
-            srcset=""
-          />
+          <figure>
+            <img
+              class="img-background"
+              src="https://images.alphacoders.com/851/851142.png"
+              alt=""
+              srcset=""
+            />
+            <figcaption>
+              <a
+                href="https://www.flaticon.com/free-icons/gear"
+                title="gear icons"
+                >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                Coders</a
+              >
+            </figcaption>
+          </figure>
           <hr />
           <h3>Favourite Quote</h3>
           <div class="quote">
             <div>
               <div class="quote-background">
-                <p class="quote-text">“Believe In The Kamina That Believe In You.”</p>
+                <p class="quote-text">
+                  “Believe In The Kamina That Believe In You.”
+                </p>
                 <p>Kamina</p>
               </div>
             </div>
@@ -228,34 +407,74 @@
           <div class="characters">
             <div class="character">
               <h4>Kamina</h4>
-              <img
-                src="https://images7.alphacoders.com/851/851227.jpg"
-                alt=""
-              />
+              <figure>
+                <img
+                  src="https://images7.alphacoders.com/851/851227.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Simon</h4>
-              <img
-                src="https://images4.alphacoders.com/133/133244.jpg"
-                alt=""
-              />
+              <figure>
+                <img
+                  src="https://images4.alphacoders.com/133/133244.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Yoko</h4>
-              <img
-                src="https://images4.alphacoders.com/660/660281.jpg"
-                alt=""
-              />
+              <figure>
+                <img
+                  src="https://images4.alphacoders.com/660/660281.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
 
             <div class="character">
               <h4>Logo</h4>
-              <img
-                src="https://images4.alphacoders.com/119/119476.jpg"
-                alt=""
-              />
+              <figure>
+                <img
+                  src="https://images4.alphacoders.com/119/119476.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  <a
+                    href="https://www.flaticon.com/free-icons/gear"
+                    title="gear icons"
+                    >Naruto and Sasuke's family by もり苔 (pixiv) found at Alpha
+                    Coders</a
+                  >
+                </figcaption>
+              </figure>
             </div>
           </div>
         </div>
