Change class names and add comments to css file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <main>
-      <div class="nje">
+      <div class="background">
         <h1>Anime Trails</h1>
 
         <div class="anime-background">
@@ -31,7 +31,7 @@
 
           <figure>
             <img
-              class="img-background"
+              class="anime-image"
               src="https://images8.alphacoders.com/598/598786.jpg"
               alt=""
               srcset=""
@@ -155,7 +155,7 @@
           <p>Animation · Action · Adventure · Comedy · Fantasy</p>
           <figure>
             <img
-              class="img-background"
+              class="anime-image"
               src="https://images5.alphacoders.com/694/694325.png"
               alt=""
               srcset=""
@@ -266,7 +266,7 @@
           <p>Action, Adventure, Fantasy, Drama</p>
           <figure>
             <img
-              class="img-background"
+              class="anime-image"
               src="https://images6.alphacoders.com/606/606263.jpg"
               alt=""
               srcset=""
@@ -376,7 +376,7 @@
           <p>Action, Adventure</p>
           <figure>
             <img
-              class="img-background"
+              class="anime-image"
               src="https://images.alphacoders.com/851/851142.png"
               alt=""
               srcset=""
